added async model training
