# app/src/routers/tensor.py
@@ -16,7 +16,7 @@ from src.config import PG_CREDENTIALS, MESSAGE_BROKER_URL, JOB_EXCHANGE_NAME, \
 from src.logic.tensor import validate_data_point, run_model, \
     run_model_batched, validate_csv_file
 from src.models.tensor import ProcessRequest, BatchProcessRequest, \
-    AsyncBatchProcessRequest
+    AsyncBatchProcessRequest, TrainModelRequest
 from src.services.rabbitmq import write_to_exchange
 
 
@@ -140,7 +140,9 @@ async def async_batch_model_handler(r: AsyncBatchProcessRequest, uid: str = Depe
                'job_id': job_id}
 
     # send event to RabbitMQ broker to trigger worker
-    event = {'job_id': str(job_id), 'model_id': str(r.model_id), 'user': uid}
+    event = {'job_id': str(job_id),
+             'event_type': 'model_run',
+             'event': {'model_id': str(r.model_id), 'user': uid}}
     write_to_exchange(MESSAGE_BROKER_URL,
                       JOB_EXCHANGE_NAME,
                       json.dumps(event),
@@ -149,4 +151,60 @@ async def async_batch_model_handler(r: AsyncBatchProcessRequest, uid: str = Depe
     return JSONResponse(status_code=status.HTTP_201_CREATED, content=je(content))
 
 
+@ROUTER.patch('/train')
+async def train_model_handler(r: TrainModelRequest, uid: str = Depends(get_user())) -> JSONResponse:
+    """API handler used to handle batch processing
+    of model data
+
+    Args:
+        r (BatchProcessRequest): [description]
+        uid (str, optional): [description]. Defaults to Depends(get_user()).
+
+    Returns:
+        JSONResponse: [description]
+    """
+
+    LOGGER.debug('received request to batch process data async for user %s', uid)
+    # get model metadata from postgres server. return
+    # 404 error code if model cannot be found
+    model_meta = get_user_model(PG_CREDENTIALS, uid, r.model_id)
+    if model_meta is None:
+        LOGGER.error('unable to retrieve model %s for user %s', r.model_id, uid)
+        return json_response_with_message(status.HTTP_404_NOT_FOUND, 'Cannot find specified model')
+
+    # validate provided input vectors against
+    # the schema registered against the model
+    invalid_input_points = any(not validate_data_point(x, model_meta.model_schema) for x in r.input_vectors)
+    if invalid_input_points:
+        LOGGER.error('unable to validate data point(s) against schema %s', model_meta.model_schema)
+        return json_response_with_message(status.HTTP_400_BAD_REQUEST, 'Invalid input vector(s)')
+
+    # validate provided output vectors against
+    # the schema registered against the model
+    invalid_output_points =  any(len(x) != model_meta.output_shape for x in r.output_vectors)
+    if invalid_output_points:
+        LOGGER.error('unable to validate data point(s) against schema %s', model_meta.model_schema)
+        return json_response_with_message(status.HTTP_400_BAD_REQUEST, 'Invalid output vector(s)')
+
+    # insert job into database and generate new event
+    job_id = insert_async_job(PG_CREDENTIALS, r.model_id, 0)
+    event = {'job_id': str(job_id),
+             'event_type': 'model_train',
+             'event': {
+                 'model_id': str(r.model_id),
+                 'user': uid,
+                 'epochs': r.epochs,
+                 'input_vectors': r.input_vectors,
+                 'output_vectors': r.output_vectors}}
+    # send event to RabbitMQ broker to trigger worker
+    write_to_exchange(MESSAGE_BROKER_URL,
+                      JOB_EXCHANGE_NAME,
+                      json.dumps(event),
+                      JOB_EXCHANGE_TYPE,
+                      JOB_ROUTING_KEY)
+
+    content = {'http_code': status.HTTP_201_CREATED,
+               'message': 'Successfully queued job',
+               'job_id': job_id}
+    return JSONResponse(status_code=status.HTTP_201_CREATED, content=je(content))
 
